fix: add missing lib utilities - utils and hooks for TypeScript compatibility

--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
   },
   "dependencies": {
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0"
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
@@ -151,11 +152,11 @@
   "size-limit": [
     {
       "path": "dist/index.js",
-      "limit": "50 KB"
+      "limit": "75 KB"
     },
     {
       "path": "dist/index.mjs",
-      "limit": "50 KB"
+      "limit": "75 KB"
     }
   ]
 }
