--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@shanfu/ui",
   "version": "1.0.0",
+  "type": "module",
   "description": "Comprehensive form and UI components library featuring inline editing, async selects, enhanced inputs, and modern design system. Built on React, TypeScript, and Tailwind CSS with shadcn/ui components.",
   "keywords": [
     "react",
@@ -106,6 +107,7 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
+    "@eslint/js": "^9.28.0",
     "@radix-ui/react-dropdown-menu": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -128,6 +130,7 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.2.0",
     "jsdom": "^26.1.0",
     "lucide-react": "^0.514.0",
     "postcss": "^8.4.35",
