--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,7 +1,7 @@
 name: 🐛 Bug Report
 description: Create a report to help us improve
-title: "[Bug]: "
-labels: ["bug", "needs-triage"]
+title: '[Bug]: '
+labels: ['bug', 'needs-triage']
 
 body:
   - type: markdown
@@ -27,7 +27,7 @@ body:
     attributes:
       label: Package Version
       description: What version of @shanfu/ui are you using?
-      placeholder: "1.0.0"
+      placeholder: '1.0.0'
     validations:
       required: true
 
@@ -36,7 +36,7 @@ body:
     attributes:
       label: Bug Description
       description: A clear and concise description of what the bug is
-      placeholder: "Describe the bug..."
+      placeholder: 'Describe the bug...'
     validations:
       required: true
 
@@ -58,7 +58,7 @@ body:
     attributes:
       label: Expected Behavior
       description: A clear and concise description of what you expected to happen
-      placeholder: "Describe what should happen..."
+      placeholder: 'Describe what should happen...'
     validations:
       required: true
 
@@ -67,7 +67,7 @@ body:
     attributes:
       label: Actual Behavior
       description: A clear and concise description of what actually happened
-      placeholder: "Describe what actually happens..."
+      placeholder: 'Describe what actually happens...'
     validations:
       required: true
 
@@ -79,7 +79,7 @@ body:
       render: tsx
       placeholder: |
         import { Component } from '@shanfu/ui';
-        
+
         function App() {
           return <Component />;
         }
@@ -102,14 +102,14 @@ body:
     attributes:
       label: Operating System
       description: Which operating system are you using?
-      placeholder: "macOS 14, Windows 11, Ubuntu 22.04"
+      placeholder: 'macOS 14, Windows 11, Ubuntu 22.04'
 
   - type: input
     id: node
     attributes:
       label: Node.js Version
       description: Which version of Node.js are you using?
-      placeholder: "18.17.0"
+      placeholder: '18.17.0'
 
   - type: dropdown
     id: framework
@@ -130,11 +130,11 @@ body:
     attributes:
       label: Additional Context
       description: Add any other context about the problem here
-      placeholder: "Screenshots, error messages, etc."
+      placeholder: 'Screenshots, error messages, etc.'
 
   - type: checkboxes
     id: contribution
     attributes:
       label: Contribution
       options:
-        - label: I would be willing to help fix this bug 
+        - label: I would be willing to help fix this bug
